docs/sf-export/sfdx-raw/objects/Temp_Data_Load_Object__c/Temp_Data_Load_Object__c.object-meta.xml
<CustomObject>
    <label>Temp Data Load Object</label>
    <nameField>
        <displayFormat>TDLO-{00000}</displayFormat>
        <label>Temp Data Load Object Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Temp Data Load Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>