docs/sf-export/sfdx-raw/objects/Temp_Data_Load_Object__c/fields/DataLoad_Done__c.field-meta.xml
<CustomField>
    <fullName>DataLoad_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DataLoad Done</label>
    <type>Checkbox</type>
</CustomField>