docs/sf-export/sfdx-raw/objects/Temp_Data_Load_Object__c/fields/Field_11__c.field-meta.xml
<CustomField>
    <fullName>Field_11__c</fullName>
    <label>Field 11</label>
    <length>255</length>
    <type>Text</type>
</CustomField>