docs/sf-export/sfdx-raw/objects/Temp_Data_Load_Object__c/fields/Field_2__c.field-meta.xml
<CustomField>
    <fullName>Field_2__c</fullName>
    <label>Field 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>